--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark mx-md-5">
+        <nav class="navbar navbar-expand-md navbar-dark mx-md-5 sticky-top">
             <a class="navbar-brand" href="#">JamesArrojo.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbarMenu" aria-controls="myNavbarMenu" aria-expanded="false" aria-label="Toggle navigation">
 		
@@ -55,8 +55,8 @@
         
     </header>
     <!-- main content -->
-    <main class="jumbotron d-flex align-content-center flex-md-row-reverse flex-wrap py-3 mx-md-5 min-vh-100">
-        <section class="col-12 col-md-7 d-flex flex-column justify-content-center text-center text-md-left">
+    <main class="jumbotron d-flex align-content-center flex-md-row-reverse flex-wrap py-3 mx-md-5 min-vh-100 pt-sm-5">
+        <section class="col-12 col-md-7 d-flex flex-column justify-content-center text-center text-md-left pt-sm-5">
             <span>Greetings! I am</span>
             <h1>James Arrojo</h1>
             <h2>Full Stack Web Developer </h2>
